# somafm-cli

./: .gitignore  Cargo.toml  README.md  run.sh
lessons/: 01-project-structure-modules.md  02-ownership-borrowing-async.md  03-data-modeling-serialization.md  04-concurrent-programming-message-passing.md  05-real-world-application-architecture.md  README.md
src/: actions.rs  api.rs  app.rs  audio.rs  audio_demo.rs  main.rs  ui.rs
src/utils/: mod.rs  parsing.rs
