[package]
name = "somafm-tui"
version = "0.1.0"
edition = "2021"
description = "A retro-styled TUI for Soma FM radio stations"
license = "MIT"
default-run = "somafm-tui"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io-util"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4"

# Audio dependencies
rodio = "0.19"
symphonia = { version = "0.5", features = ["all"] }
futures-util = "0.3"

[[bin]]
name = "somafm-tui"
path = "src/main.rs"

[[bin]]
name = "somafm-no-audio"
path = "src/bin/somafm-no-audio.rs"
